# FaceAlignment_NPD_3000fps

./: CMakeLists.txt  README.md  image_names.txt
include/lbf/: common.hpp  lbf.hpp
include/npd/: npddetect.h
src/: main.cpp  prepare.cpp  test.cpp  train.cpp  utils.cpp
src/lbf/: common.cpp  lbf.cpp  rf.cpp
src/npd/: npddetect.cpp  npdmodel.cpp
